# ME5413_Planning_Project

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml
.catkin_tools/profiles/default/: devel_collisions.txt
.github/workflows/: industrial_ci_action.yml
atomic_configure/: _setup_util.py  local_setup.sh  setup.sh
docker/: nvidia-ros-noetic.Dockerfile  planning-overlay.Dockerfile
src/jackal_description/: README.md
src/jackal_description/urdf/: accessories.urdf.xacro
src/jackal_description/urdf/accessories/: hdl32_mount.urdf.xacro  standoffs.urdf.xacro  vlp16_mount.urdf.xacro
src/me5413_world/: CMakeLists.txt  package.xml
src/me5413_world/cfg/: path_publisher.cfg  path_tracker.cfg
src/me5413_world/include/me5413_world/: math_utils.hpp  path_publisher_node.hpp  path_tracker_node.hpp  pid.hpp
src/me5413_world/launch/: navigation.launch  path_tracking.launch  world.launch
src/me5413_world/rviz/: gmapping.rviz  manual.rviz  navigation.rviz
src/me5413_world/src/: path_publisher_node.cpp  path_tracker_node.cpp  pure_pursuit_closest_point_approach.cpp  pure_pursuit_linear_approach.cpp  pure_pursuit_target_point_approach.cpp
src/me5413_world/worlds/: me5413_planning.world
